<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/menu_option_setting"
        android:title="@string/menu_option_setting"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_option_contact"
        android:title="@string/menu_option_contact"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/menu_option_about"
        android:title="@string/menu_option_about"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/menu_option_more_games"
        android:title="@string/menu_option_more_games"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>